--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://d3js.org/d3-color.v1.min.js"></script>
     <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <script src="/dot-matrix/DotMatrix.js"></script>
+    <!--<script src="/dot-matrix/DotMatrix.js"></script>-->
 </head>
 
 <body>
