Link to screenshots

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         </p>
         <p>The image below shows the distribution in each of the countries.</p>
 
-        <img src="/screenshots/HappinessXcountry.jpg" alt="This was a photo" />
+        <img src="/ivis-world-values/screenshots/HappinessXcountry.jpg" alt="This was a photo" />
 
         <p>From that visualization we get some insights: the country with more percentage of “very happy” population is South Africa. Germany and Spain are predominant at “rather happy”, and Egypt has a shocking majority of “not at all happy”.</p>
         <p>With the aim of getting more insights into what happened in Egypt for such terrifying results, we can visualize its evolution over the years.</p>
-        <img src="/screenshots/HappinessEgyptTime.jpg" />
+        <img src="/ivis-world-values/screenshots/HappinessEgyptTime.jpg" />
 
         <p>
             The graphic shows that for previous years the feeling of happiness was more in line with the other countries, and it was only in the last period when it dramatically fell.
@@ -58,7 +58,7 @@
         </p>crisis</a> the country suffered from 2011 until 2014.</p>
 
         <p>The map visualization allows us to see an overview of all countries’ happiness index through color gradients. Although, it fails with negative values, like for Egypt.</p>
-        <img src="/screenshots/HappinessMap.jpg" />
+        <img src="/ivis-world-values/screenshots/HappinessMap.jpg" />
         <!--<p>Then, I searched for the first aim the participats from each country and the results confirmed even more my hypothesis.</p>
     <img src="/screenshots/AimsEgypt.jpg" />-->
         <p>
@@ -68,14 +68,14 @@
 
         <h3>Analytic trail using my new tool</h3>
         <p>The first look at this new visualization tool shows an overview of the feeling of happiness around the world for a specific year by means of a color gradient. By moving the slider below the map we get the evolution of this variable over the time.</p>
-        <img src="/screenshots/.jpg" />
+        <img src="/ivis-world-values/screenshots/.jpg" />
         <p>Now, we can see more insights about the distribution of this variable in each country by selecting them on the map.</p>
 
         <p>
             The pictograms appear in happiness ascending order by default, but can be changed by selecting other sorting criteria.
             To see the relation between happiness and the important aspects in life for each country, we can now change our variable selected. Let’s see the importance of religion.
         </p>
-        <img src=""/>
+        <img src="/ivis-world-values"/>
         <p>The pictograms of each country are still sorted by their happiness index, so here we can observe a relation between happiness and religion.</p>
 
         <p>With that selection of countries it is possible to change variables and time and quickly see the results.</p>
