--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
                 <option value="1">GDP ascendent</option>
                 <option value="1">GDP descendent</option>
             </select>
-
+            
+            <div id="Pic-message">Select one or more countries on the map to see the details. </div>
             <div id="Pictogram"></div>
             <div id="Legend"></div>
         </div>
