Typo in the analytic trail

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             To see the relation between happiness and the important aspects in life for each country, we can now change our variable selected. Let’s see the importance of religion.
         </p>
         <img src="/ivis-world-values/screenshots/OverviewReligion.jpg" />
-        <p>The pictograms of each country are still sorted by their happiness index, so here we can observe a relation between happiness and religion.</p>
+        <p>The pictograms of each country are still sorted by their happiness index, but the colors represent the distribution os the new variable, so here we can observe a relation between happiness and religion.</p>
 
         <p>With that selection of countries it is possible to change variables and time and quickly see the results.</p>
 
