--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <select id="sort-list" onchange="getSortBy(this)">
                 <option value="0">Happiness ascendent</option>
                 <option value="0">Happiness descendent</option>
-                <option value="1">GDP ascendent</option>
-                <option value="1">GDP descendent</option>
+                <!--<option value="1">GDP ascendent</option>
+                <option value="1">GDP descendent</option>-->
             </select>
             
             <div id="Pic-message">Select one or more countries on the map to see the details. </div>
