--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 <option value="Poverty ratio">Poverty ratio</option>
                 <option value="Improved sanitation">Improved sanitation</option>
                 <option value="Improved water sources">Improved water sources</option>
-                <option value="Internet user per 100">Internet user per 100</option>
-                <!--<option value=""></option>-->
+                <option value="Total fertility rate">Total fertility rate</option>
+                <option value="Under five mortality">Child under five mortality</option>
             </select>
 
             <div class="sub-section">Sort countries by:</div>
