--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p>Combining the WVS data with Gapminder, this visualization allows to see the overview of the GDP by selecting "Income".</p>
         <img src="/ivis-world-values/screenshots/Income.jpg" />
 
-        <p>In total, this visualization contains 8 variables from WVS, 1 from Gapminder, and all the countries available at WVS for the period 1990-2014.</p>
+        <p>In total, this visualization contains a total of 15 variables, 8 from WVS and 7 from Gapminder, and all the countries available at WVS for the period 1990-2014.</p>
 
         <h2>Learnings from this project</h2>
         <p>
