--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="question-section">More variables and tools:</div>
             <button id="Happiness" class="btn" onclick="changeVariable(event, this.id,wave)">Happiness</button>
             <button id="Aims" class="btn" onclick="changeVariable(event, this.id,wave)">Aims in life</button>
-            <button id="GDP" class="btn" onclick="getAvgDataGap(this.id, wave)">Income</button>
+            <!--<button id="GDP" class="btn" onclick="getAvgDataGap(this.id, wave)">Income</button>-->
 
             <button id="Clear" class="btn" onclick="clearCountries()">Clear countries</button>
             
