--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
         <p>With that selection of countries it is possible to change variables and time and quickly see the results.</p>
 
-        <p>Combining the WVS data with Gapminder, this visualization allows to see the overview of the GDP by selecting "Income".</p>
-        <img src="/ivis-world-values/screenshots/Income.jpg" />
+        <p>Combining the WVS data with Gapminder, it is possible to see on the map an the overview of variables related to wealth, health, and living conditions and relate them to the "important in life" previous variables.</p>
+        <img src="/ivis-world-values/screenshots/Sanitary.jpg" />
 
         <p>In total, this visualization contains a total of 15 variables, 8 from WVS and 7 from Gapminder, and all the countries available at WVS for the period 1990-2014.</p>
 
